# tg_music_app

./: .env.example  .gitignore  README.md  pyproject.toml
tgmusic/: __main__.py  api.py  config.py  db.py  handlers.py
webapp/: .env.example  index.html  package.json  vite.config.ts
webapp/src/: App.tsx  api.ts  index.css  main.tsx  player.tsx  telegram.ts
webapp/src/components/: Player.tsx  TrackRow.tsx
webapp/src/tabs/: Library.tsx  Search.tsx
