[project]
name = "tgmusic"
version = "0.1.0"
description = "Personal Spotify-like library on top of Telegram"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tgmusic"]
